去掉无相关的api.proto
